--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-//My css information is pretty bad here I tried and found stuff so it might be some of the codes are really unnecessary.
 .input1 {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   position: absolute;
@@ -14,42 +13,24 @@ position: absolute;
   color:cornflowerblue;
   font-size: calc(23px);
 }
-.btn1 {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+.tryout {
   position: absolute;
   margin: 0;
-  top: 15%;
-  left: 4%;
-  padding: 10px 20px;
-  background-color: darkgray;
-  color:black;
-  cursor: pointer;
-}
-.btn2 {
-  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  position: absolute;
-  margin: 0;
-  top: 23%;
-  left: 4%;
-  padding: 10px 21px;
-  background-color: darkgray;
-  color: black;
-  cursor: pointer;
+  top: 18%;
+  left: 2%;
 }
 .TextHolder {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   text-align: center;
-  margin: 0;
+  margin: 10;
   position: absolute;
-  top: 15%;
-  left: 12%;
-  background-color:darkgrey ;
+  top: 20%;
+  left: 10%;
   min-height: 15vh;
   min-width: 36vh;
   max-width:fit-content;
   display:grid;
-  align-items: center;
+  align-items: left;
   justify-content: center;
   color: black;
 }
-
